make changes on configuration and https hosting

--- a/EcommerceAdminBackend.API/appsettings.json
+++ b/EcommerceAdminBackend.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.0.0.32;Database=Commerce.ISOP_CH;Encrypt=False;Connection Timeout=30;User Id=ipcom-commerce;Password=bD^_^C+YzHHd^Fa;"
+    "DefaultConnection":   "Server=178.208.38.138,60001;Database=Commerce.ISOP_CH;Encrypt=False;Connection Timeout=30;User Id=ipcom-commerce;Password=bD^_^C+YzHHd^Fa"
   }
 }
+
