add example for appsettngs

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ ipch/
 # Configuration files that may contain sensitive information
 appsettings.json
 appsettings.Development.json
-appsettings.*.json
+#appsettings.*.json
 *.pfx
 *.publishsettings
 **/Properties/launchSettings.json
